--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -17,21 +17,19 @@ jobs:
       packages: write
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 11
-      uses: actions/setup-java@v4
+    - uses: actions/checkout@v2
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
       with:
-        java-version: '11'
-        distribution: 'temurin'
-        server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-        settings-path: ${{ github.workspace }} # location for the settings.xml file
+        java-version: 1.8
+
 
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn compile package -f pom.xml -D"maven.test.skip=true"
 
     - name: Upload Artifacts
       if: always()
       uses: actions/upload-artifact@v3
       with:
         name: java-app
-        path: target/*.jar
+        path: dbsyncer-web\target\dbsyncer-*.zip
